After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682289 - Doesn't add SoupPasswordManagerGNOME feature to the session with latest soup
Doesn't add SoupPasswordManagerGNOME feature to the session with latest soup
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Passwords, Cookies, & Certificates
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-20 18:58 UTC by Gustavo Noronha (kov)
Modified: 2012-08-20 19:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.15 KB, patch)
2012-08-20 19:08 UTC, Gustavo Noronha (kov)
none Details | Review
check for SOUP_TYPE_PASSWORD_MANAGER_GNOME (1.03 KB, patch)
2012-08-20 19:19 UTC, Gustavo Noronha (kov)
committed Details | Review
move unstable API defines to be the very first thing in the file (1.19 KB, patch)
2012-08-20 19:19 UTC, Gustavo Noronha (kov)
committed Details | Review

Description Gustavo Noronha (kov) 2012-08-20 18:58:56 UTC
Apparently SOUP_TYPE_PASSWORD_MANAGER is no longer defined with the current libsoup - I could not find why in a quick investigation. We can just check for SOUP_TYPE_PASSWORD_MANAGER_GNOME, though, which is defined and is even more conceptually correct, since it's the one we use.
Comment 1 Gustavo Noronha (kov) 2012-08-20 19:08:37 UTC
Created attachment 221879 [details] [review]
patch
Comment 2 Gustavo Noronha (kov) 2012-08-20 19:19:10 UTC
Created attachment 221881 [details] [review]
check for SOUP_TYPE_PASSWORD_MANAGER_GNOME
Comment 3 Gustavo Noronha (kov) 2012-08-20 19:19:50 UTC
Created attachment 221882 [details] [review]
move unstable API defines to be the very first thing in the file
Comment 4 Gustavo Noronha (kov) 2012-08-20 19:24:02 UTC
As will become obvious from looking at the second patch, further investigation showed that soup.h (which includes soup-password-manager.h) was getting included indirectly by the ephy-embed-single.h include. Which meant that the header was being included with the feature disabled, and the later define had no effect.
Comment 5 Xan Lopez 2012-08-20 19:29:42 UTC
Review of attachment 221882 [details] [review]:

OK!
Comment 6 Xan Lopez 2012-08-20 19:29:50 UTC
Review of attachment 221881 [details] [review]:

OK.
Comment 7 Gustavo Noronha (kov) 2012-08-20 19:33:05 UTC
Comment on attachment 221881 [details] [review]
check for SOUP_TYPE_PASSWORD_MANAGER_GNOME

45ff98169957a690d0dc93ad4f05f31605409ae2
Comment 8 Gustavo Noronha (kov) 2012-08-20 19:33:15 UTC
Comment on attachment 221882 [details] [review]
move unstable API defines to be the very first thing in the file

8700fcbf2ed3b201d8ce58cf7f388799579cc9a4