ephy-embed-single: check for SOUP_TYPE_PASSWORD_MANAGER_GNOME

That is the type we actually use.

https://bugzilla.gnome.org/show_bug.cgi?id=682289